Fixed z-index for menu

--- a/assets/css/_menu.scss
+++ b/assets/css/_menu.scss
@@ -53,7 +53,7 @@
 	bottom:0;
 	top:0;
 	right:0;
-	z-index:110;
+	z-index:120;
 	height:100vh;
 	padding:248px 80px;
 	text-align:center;
